fix: adjust post tree li formatting for spacing consistency

--- a/blog/static/styles.css
+++ b/blog/static/styles.css
@@ -44,8 +44,12 @@ li {
 }
 
 li::before {
-    content: '\25B6';
+    content: '\25BC';
+    display: inline-block;
     margin-right: 0.5rem;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    transform: rotate(-90deg);
+    transition: 0.05s linear;
 }
 
 form {
@@ -56,11 +60,12 @@ form {
     margin-bottom: 1rem;
 }
 
-form div, form input {
-    width: 100%;
+form div {
+    flex: 1;
 }
 
 form input {
+    width: 100%;
     height: 100%;
     border-radius: 0;
     border-color: #acacac;
@@ -72,7 +77,8 @@ form input:focus {
 }
 
 form button {
-    width: 8rem;
+    width: 33%;
+    max-width: 6rem;
     border: 0;
     padding: 0;
     background-color: #292929;
@@ -328,6 +334,10 @@ form button:hover, form button:focus {
     width: 30%;
 }
 
+.sbar-section {
+    width: 100%;
+}
+
 @media screen and (min-width: 48rem) {
     .sidebar {
         display: flex;
@@ -337,7 +347,6 @@ form button:hover, form button:focus {
 /* Post Tree */
 
 .post-tree {
-    width: auto;
     margin: 0;
 }
 
@@ -354,8 +363,8 @@ form button:hover, form button:focus {
     margin: 0.5rem auto;
 }
 
-.year.reveal::before, .month.reveal::before {
-    content: '\25BC';
+li.reveal::before {
+    transform: rotate(0);
 }
 
 .dates li::before {
